<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/add_new_item"
        android:textAlignment="center"
        android:textColor="@color/purple_200"
        android:textSize="20sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_the_name_and_select_the_expiration_date_where_the_item_will_be_stored_in"
        android:textAlignment="center" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_name"
        android:id="@+id/etName"
        android:padding="15dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:id="@+id/btnDate"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <RadioButton
            android:onClick="onRadioButtonClicked"
            android:checked="true"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fridge"
            android:id="@+id/rFridge"
            /><RadioButton
        android:onClick="onRadioButtonClicked"

        android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/freezer"
            android:id="@+id/rFreezer"
            /><RadioButton
        android:onClick="onRadioButtonClicked"
        android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pantry"
            android:id="@+id/rPantry"
            />
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btnCancel"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:id="@+id/btnOK"
            />
    </LinearLayout>



</LinearLayout>