<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    app:cardUseCompatPadding="true"
    android:elevation="3dp"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_alignParentStart="true"
                android:layout_gravity="start"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/item"
                android:id="@+id/img"
                />
            <ImageView
                android:layout_toEndOf="@+id/img"
                android:layout_gravity="end"
                android:layout_width="30dp"
                android:layout_height="30dp"
            android:src="@drawable/ic_baseline_more_vert_24"

            app:tint="@android:color/black" />

        </RelativeLayout>

        <TextView
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textAlignment="textStart"
            android:paddingStart="10dp"
            android:id="@+id/tvItemName"
            tools:ignore="RtlSymmetry" />
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:paddingHorizontal="5dp"
            android:id="@+id/progressBar"
            />
        <TextView
            android:layout_marginVertical="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0_days_left"
            android:drawablePadding="5dp"
            app:drawableStartCompat="@drawable/ic_baseline_access_time_24"
            android:id="@+id/tvDaysLeft"
            app:drawableTint="@android:color/black" />
        <TextView
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_20_10_2021"
            android:drawablePadding="5dp"
            app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24"
            android:id="@+id/tvExpireDate"
            app:drawableTint="@android:color/black" />






    </LinearLayout>




</androidx.cardview.widget.CardView>